# git-switch

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Git-Switch Image Prompt.txt  Git-Switch-DearPyGui-PSEUDOCODE.txt  LICENSE  README.md  SECURITY.md  build.spec  codecov.yml  git-profile-switcher-prd.md  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  speckit-constitution-prompt.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
assets/fonts/: .gitkeep
docs/: architecture.md  user-guide.md
ref/design/: git-profile-switcher-prd.md
specs/001-git-profile-switcher/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-git-profile-switcher/checklists/: requirements.md
specs/001-git-profile-switcher/contracts/: service-interfaces.md
src/: __init__.py  main.py
src/core/: __init__.py  crypto.py  import_export.py  profile_manager.py  protocols.py  repository_manager.py  session.py  settings_manager.py  validation.py
src/models/: __init__.py  exceptions.py  profile.py  repository.py  serialization.py  settings.py
src/services/: __init__.py  container.py  credential_service.py  git_service.py  gpg_service.py  protocols.py  ssh_service.py
src/ui/: __init__.py  app.py  main_window.py  system_tray.py  theme.py
src/ui/components/: __init__.py  profile_card.py  status_bar.py
src/ui/dialogs/: __init__.py  confirm_dialog.py  password_dialog.py  profile_dialog.py
src/ui/views/: __init__.py  import_export_view.py  profiles_view.py  repositories_view.py  settings_view.py
src/utils/: __init__.py  notifications.py  paths.py  windows.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_password_workflow.py  test_profile_switch_workflow.py
tests/integration/: __init__.py  test_local_config.py  test_profile_switch.py
tests/security/: __init__.py  test_authentication_edge_cases.py  test_command_injection.py  test_encryption_roundtrip.py  test_no_plaintext_leakage.py
tests/unit/: __init__.py  test_credential_service.py  test_exceptions.py  test_git_service.py  test_gpg_service.py  test_import_export.py  test_models.py  test_profile_manager.py  test_repository_manager.py  test_session.py  test_settings_manager.py  test_ssh_service.py  test_system_tray.py  test_utils.py  test_validation.py
