[project]
name = "git-switch"
version = "0.1.2"
description = "Windows desktop application for managing Git user profiles"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Git-Switch Team"}
]
keywords = ["git", "profile", "ssh", "gpg", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/git-switch/git-switch"
Documentation = "https://github.com/git-switch/git-switch#readme"
Repository = "https://github.com/git-switch/git-switch.git"
Issues = "https://github.com/git-switch/git-switch/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-ra -q --strict-markers"
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests with real services",
    "security: Security-focused tests",
    "e2e: End-to-end workflow tests",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "dearpygui.*",
    "pystray.*",
    "gnupg.*",
    "win10toast.*",
    "paramiko.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.ui.*",
]
# DearPyGui returns Any from most functions, causing no-any-return errors
warn_return_any = false
# DearPyGui callbacks have Any? callable types
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = [
    "src.services.credential_service",
]
# ctypes WinDLL has dynamic attributes
disable_error_code = ["attr-defined", "assignment"]

[[tool.mypy.overrides]]
module = [
    "src.utils.windows",
]
# ctypes returns Any for Windows API calls
warn_return_any = false

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "TRY",    # tryceratops
    "RUF",    # Ruff-specific rules
]
ignore = [
    "S101",    # Use of assert (OK in tests)
    "PLR2004", # Magic value comparison
    "TRY003",  # Long exception messages
    "PLR0912", # Too many branches - complex functions are acceptable
    "PLR0913", # Too many arguments - needed for complex constructors
    "PLR0915", # Too many statements - complex methods are acceptable
    "PLR0911", # Too many return statements - needed for complex logic
    "PLC0415", # Import not at top level - deferred imports are intentional
    "TRY300",  # Consider moving to else block - style preference
    "TRY301",  # Abstract raise to inner function - style preference
    "TRY401",  # Redundant exception in logging.exception - useful for context
    "PLW1510", # subprocess.run without check - intentional for error handling
    "PLW2901", # Loop variable overwritten - intentional in parsing code
    "PLW0603", # Using global - intentional for module state
    "PLW0602", # Using global - intentional for module state
    "ERA001",  # Commented-out code - intentional for documentation
    "RUF012",  # Mutable class attrs ClassVar - not needed for protocols
    "PTH",     # Use pathlib - style preference, os module is fine
    "S603",    # subprocess untrusted input - controlled inputs are safe
    "S607",    # Partial executable path - system commands are safe
    "S110",    # try-except-pass - intentional for cleanup code
    "S112",    # try-except-continue - intentional for loop error handling
    "TC001",   # Move import to type-checking block - style preference
    "TC002",   # Move import to type-checking block - style preference
    "TC003",   # Move import to type-checking block - style preference
    "ARG002",  # Unused method argument - kept for API compatibility
    "ARG001",  # Unused function argument - kept for API/callback compatibility
    "ARG005",  # Unused lambda argument - DearPyGui callbacks require fixed signature
    "SIM102",  # Nested if - sometimes clearer than combined condition
    "SIM108",  # Ternary operator - explicit if-else is often clearer
]

[tool.ruff.lint.per-file-ignores]
"src/ui/**/*.py" = [
    "S105",    # Hardcoded password refers to input field names, not real passwords
]
"tests/**/*.py" = [
    "S101",    # Use of assert in tests is expected
    "ARG",     # Unused function args (fixtures)
    "PLR2004", # Magic values in tests are fine
    "S607",    # Partial executable paths OK in tests (e.g., "git")
    "S105",    # Hardcoded passwords in tests are expected
    "S106",    # Hardcoded passwords in tests are expected
    "S108",    # Hardcoded tmp paths in tests are expected
    "TC003",   # Runtime imports needed for fixtures
    "RUF059",  # Unused unpacked variables OK in tests
    "SLF001",  # Private member access OK in tests
    "F841",    # Unused local vars OK in tests (side effects)
    "B018",    # Useless attribute access OK in tests
    "RSE102",  # Unnecessary parentheses on raise OK in tests
    "DTZ001",  # Datetime without tz OK in tests
    "DTZ005",  # Datetime.now without tz OK in tests
    "E501",    # Line too long OK in tests
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/ui/*",           # UI layer harder to test
    "*/__init__.py",
    "src/main.py",        # Application entry point
    "src/utils/windows.py",  # Windows-specific utilities
    "src/services/credential_service.py",  # Windows Credential Manager
    "src/**/protocols.py",  # Protocol definitions (abstract)
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
